Safari javascript bug and source highlighting update Startup.cs altered dev ip address to allow local network testing detectbrowser added and javascript files altered to resolve issue with string indexing on safari source vegetable highlighting added when clicking on truck

--- a/gardenrush/wwwroot/css/gameboard_normal.css
+++ b/gardenrush/wwwroot/css/gameboard_normal.css
@@ -88,7 +88,7 @@
 }
 
 #truck > button {
-    border: 1px red;
+    border: 2px red;
     border-style: solid;
     background-color: transparent;
     background-repeat: no-repeat;
